--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
 
 .navbar {
   border-bottom: 2px;
-  /* border-color: rgb(152, 152, 152); */
   -moz-box-shadow: 3px 3px 5px 6px #ccc;
   -webkit-box-shadow: 3px 3px 5px 6px #ccc;
   box-shadow: 0px 3px 5px 2px #ccc;
@@ -98,6 +97,8 @@
   color:rgb(30, 58, 138);
   font-weight: 700;
   font-size: 1.2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .PopUpRating{
@@ -107,12 +108,33 @@
 }
 
 .closePop{
-  margin-left: 12rem;
+  margin-left: 14rem;
 }
 
 .popup-content{
   position: absolute !important;
-  top: 12% !important;
+  bottom: 12% !important;
   right: 1% !important;
   pointer-events: auto !important;
+}
+
+.Feedback{
+  position: fixed;
+  bottom: 2%;
+  right: 1%;
+}
+
+.sendButton{
+  display: block;
+  margin-top: 1rem !important;
+  text-align: center !important;
+  margin-left: 3.8rem !important;
+  margin-bottom: 1rem !important;
+}
+
+.loginsignup{
+  margin-top: 5rem;
+  margin-left: 50%;
+  margin-bottom: 5rem;
+  margin-right: 10%;
 }
