--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,13 @@
   border-radius: 2%;
 }
 
+.popupmodel1 {
+  position: relative;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 2%;
+}
+
 /* #PopUp_Issue{
   margin-left: 2rem;
 } */
@@ -143,3 +150,51 @@
   margin-bottom: 5rem;
   margin-right: 10%;
 }
+
+
+.page5div1{
+ display: inline-block;
+}
+
+.page5div2{
+  display: inline-block;
+  margin-left: 50px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .page5div1{
+    display: block;
+  }
+
+  .page5div2{
+    display: block;
+    margin-top: 25px;
+    margin-left: 0px;
+  }
+  
+}
+
+.page6div1{
+  display: inline-block;
+ }
+ 
+ .page6div2{
+   display: inline-block;
+   margin-left: 50px;
+ }
+ 
+ 
+ @media only screen and (max-width: 600px) {
+   .page6div1{
+     display: block;
+   }
+ 
+   .page6div2{
+     display: block;
+     margin-top: 25px;
+     margin-left: 0px;
+   }
+   
+ }
+
